Request to API for related item IDs now works

--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -2,7 +2,8 @@
   border: solid red 4px;
 }
 
-#relatedItemsComparison * {
+.container {
   border: solid black 2px;
   margin: 20px;
+  padding: 10px
 }
