--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -1,11 +1,12 @@
 #root {
-  width: 60vw;
+  width: 80vw;
   margin: 0 auto
 }
 
 #relatedItemsComparison {
   border: solid red 4px;
-  padding: 20px
+  padding: 20px;
+  border-radius: 5px
 
 }
 
