--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -1,7 +1,7 @@
-/* #root {
-  width: 80vw;
+#root {
+  width: 70vw;
   margin: 0 auto
-} */
+}
 
 #relatedItemsComparison {
   border: solid red 4px;
