--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -3,3 +3,28 @@
   border-color: pink;
   padding: 5px;
 }
+
+#ratingsOverview * {
+  border-style: solid;
+  border-color: red;
+  padding: 5px;
+}
+
+.flex-parent {
+  display: flex;
+}
+
+.flex-child-1 {
+  flex: 1 1 0;
+}
+
+.flex-child-2 {
+  flex: 3 1 0;
+}
+
+.center {
+  margin: auto;
+  width: 100%;
+  border: 3px solid green;
+  padding: 10px;
+}
