Make helpful?/report section in ratings-tile.jsx interactive.

--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -1,4 +1,4 @@
-#ratingsList * {
+/* #ratingsList * {
   border-style: solid;
   border-color: pink;
   padding: 5px;
@@ -8,6 +8,10 @@
   border-style: solid;
   border-color: red;
   padding: 5px;
+} */
+
+.underline {
+  text-decoration: underline;
 }
 
 .flex-parent {
