--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -10,6 +10,13 @@
   padding: 5px;
 } */
 
+
+.border {
+  border-style: solid;
+  border-color: red;
+  padding: 5px;
+}
+
 .underline {
   text-decoration: underline;
 }
@@ -28,7 +35,20 @@
 
 .center {
   margin: auto;
-  width: 100%;
+  width: 90%;
   border: 3px solid green;
   padding: 10px;
+}
+
+.button-center {
+  margin: 30px;
+  display: block;
+  /* border: 3px solid green; */
+  padding: 10px;
+  flex: 1 1 0;
+}
+
+.center-vertically {
+
+  padding: 30px 0;
 }
