--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -33,6 +33,17 @@
   width: 200px;
   height: 300px;
 
+
+}
+
+#addToOutfit {
+  border: solid black 2px;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 20px;
+  width: 200px;
+  height: 300px;
+  display: inline;
 }
 
 .relatedCard {
@@ -51,6 +62,27 @@ width: 200px;
 height: 200px;
 }
 
+#outfitContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#relatedContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#outfitContainer button {
+  margin: 0 10px;
+}
 
 
 .hidden {
