--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -2,9 +2,9 @@
   border-style: solid;
   border-color: pink;
   padding: 5px;
-}
+} */
 
-#ratingsOverview * {
+/* #ratingsOverview * {
   border-style: solid;
   border-color: red;
   padding: 5px;
@@ -59,8 +59,8 @@
 }
 
 .center-vertically {
-
   padding: 30px 0;
+  text-align: right;
 }
 
 .in-line {
