--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -84,6 +84,10 @@ height: 200px;
   margin: 0 10px;
 }
 
+.redStrikethrough {
+  text-decoration: line-through;
+  color: red
+}
 
 .hidden {
   visibility: hidden;
