--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -90,3 +90,38 @@
 .button:hover {
   background-color: darkgrey;
 }
+
+.star-rating {
+  display: inline-block;
+  unicode-bidi: bidi-override;
+  color: grey;
+  font-size: 25px;
+  height: 25px;
+  width: auto;
+  margin: 0;
+  position: relative;
+  padding: 0;
+  border-style: solid;
+  border-color: red;
+}
+
+.back-stars {
+  padding: 0;
+  display: flex;
+  z-index: 0;
+  border-style: solid;
+  border-color: blue;
+}
+
+.front-stars {
+  color: goldenrod;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  border-style: solid;
+  border-color: purple;
+}
