Set up a system in CSS for background and color theme variables. This commit adds global styling that is of course temporary, but demonstrates how to use CSS variables to create a styling theme

--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -16,7 +16,7 @@
 }
 
 .container {
-  border: solid black 2px;
+  /* border: solid black 2px; */
   margin: 20px;
   padding: 5px;
   border-radius: 5px;
@@ -24,7 +24,7 @@
 
 }
 .card {
-  border: solid black 2px;
+  /* border: solid black 2px; */
   border-radius: 5px;
   display: inline-block;
   padding: 10px;
