--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -1,8 +1,3 @@
-#root {
-  width: 70vw;
-  margin: 0 auto
-}
-
 #relatedItemsComparison {
   padding: 20px;
   border-radius: 5px;
@@ -16,7 +11,6 @@
 }
 
 .container {
-  /* border: solid black 2px; */
   margin: 20px;
   padding: 5px;
   border-radius: 5px;
@@ -24,7 +18,6 @@
 
 }
 .card {
-  /* border: solid black 2px; */
   border-radius: 5px;
   display: inline-block;
   padding: 10px;
@@ -33,6 +26,22 @@
   height: 300px;
   position: relative;
   border: solid black 2px;
+}
+
+.cardNavButton {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: transparent;
+  color: black;
+  transition: background-color 0.4s ease-in-out;
+  border: none;
+}
+
+.cardNavButton:hover {
+  background-color: #00b7ff;
 }
 
 #addToOutfit {
@@ -99,15 +108,15 @@ height: 200px;
 .card button {
   position: absolute;
   text-align: center;
-  top: 20px;
-  right: 20px;
+  top: 15px;
+  right: 15px;
   background-color: white;
   border-radius: 5px;
   border: solid black 3px;
   outline: none;
-  height: 40px;
-  width: 45px;
-  font-size: 26px
+  height: 35px;
+  width: 40px;
+  font-size: 22px
 }
 
 .compareTable {
