--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -122,7 +122,7 @@ height: 200px;
 .compareTable {
   margin: 0 auto;
   border-collapse: collapse;
-  width: 100%;
+  width: 70%;
 }
 
 .compareTable th,
@@ -131,4 +131,9 @@ height: 200px;
   padding: 10px;
   margin: 30px;
   border: 1px solid black;
+}
+
+.ReactModal__Content {
+  width: 70%;
+  height: 70%;
 }
