--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -65,9 +65,23 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+.cardImgContainer {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .cardThumbs {
-width: 200px;
-height: 200px;
+  width: auto;
+  height: auto;
+  max-width: none;
+  max-height: none;
+  object-fit: cover;
+
 }
 
 #outfitContainer {
