--- a/client/src/components/overview/overview.css
+++ b/client/src/components/overview/overview.css
@@ -97,9 +97,6 @@
   position: relative;
 }
 
-#modal {
-  overflow-y: auto;
-}
 .expanded {
   display: flex;
   margin: auto;
@@ -108,15 +105,15 @@
 .expandedImage {
   max-width: 70vw;
   max-height: 55vh;
-  transform: scale(1.5);
+  transform: scale(1.25);
   margin: auto;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   cursor: zoom-in;
 }
 
 .expandedGallery {
   display: flex;
-  margin-top: 15vh;
+  margin-top: 7vh;
   justify-content: center;
 }
 
@@ -127,8 +124,8 @@
 }
 
 .leftImage {
-  position: absolute;
-  margin-left: 6vw;
+  position: relative;
+  /* margin-left: 6vw; */
   height: 60px;
   width: 60px;
   font-size: 30px;
@@ -137,11 +134,11 @@
 }
 
 .rightImage {
-  position: absolute;
+  position: relative;
   height: 60px;
   width: 60px;
   font-size: 30px;
-  margin-left: 83vw;
+  /* margin-left: 83vw; */
   margin-top: 27vh;
   cursor:pointer;
 }
@@ -183,8 +180,9 @@
 }
 
 .style {
-  font-Weight:bold;
-  margin-right: 10px
+  font-weight:bolder;
+  margin-right: 10px;
+  font-size: 18px;
 }
 
 .styleSelector {
