--- a/client/src/components/ratings-reviews/ratingsStyles.css
+++ b/client/src/components/ratings-reviews/ratingsStyles.css
@@ -27,6 +27,7 @@
 
 .flex-child-1 {
   flex: 1 1 0;
+
 }
 
 .flex-child-2 {
@@ -137,4 +138,9 @@
   overflow: hidden;
   border-style: solid;
   border-color: purple;
+}
+
+.progress-bar-label {
+  padding-right: 10px;
+  padding-bottom: 5px;
 }
