Refactored server to accept product IDs in url

--- a/client/src/components/related-items-comparison/relatedStyles.css
+++ b/client/src/components/related-items-comparison/relatedStyles.css
@@ -147,7 +147,12 @@
   border: 1px solid black;
 }
 
-.ReactModal__Content {
+ReactModal__Content {
   width: 70%;
   height: 70%;
+  text-decoration: line-through;
+}
+
+ReactModal__Overlay {
+
 }
